PYIC-7878: More clean up / fix sonarcloud issues